# corpus

./: CHANGELOG.md  LICENSE  corpus.py  pyproject.toml
.github/workflows/: corpus-workflow.yml
docs/: conf.py
src/corpus/: __init__.py  corpus.py  plotting.py
tests/: test_corpus.py  test_ranks_and_frequencies.txt
